--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,17 @@ jobs:
     steps:
       - name: Check out the source code
         uses: actions/checkout@v4
+      - name: Cache tools
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-${{ hashFiles('Cargo.toml') }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
       - name: Install Rust
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
       - name: Check formatting
@@ -28,6 +37,15 @@ jobs:
     steps:
       - name: Check out the source code
         uses: actions/checkout@v4
+      - name: Cache tools
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-${{ hashFiles('Cargo.toml') }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
       - name: Build the binary
