--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,10 +64,13 @@ jobs:
           RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
       - name: Install grcov
         run: |
-            wget -O /tmp/grcov.tar.bz2 https://github.com/mozilla/grcov/releases/download/v0.8.19/grcov-x86_64-unknown-linux-gnu.tar.bz2
-            tar xjf /tmp/grcov.tar.bz2
-            mv grcov /usr/local/bin/
-            chmod +x /usr/local/bin/grcov
+            if [ ! -x  ~/.cargo/bin/grcov ]
+            then
+                wget -O /tmp/grcov.tar.bz2 https://github.com/mozilla/grcov/releases/download/v0.8.19/grcov-x86_64-unknown-linux-gnu.tar.bz2
+                tar xjf /tmp/grcov.tar.bz2
+                chmod +x grcov
+                mv grcov ~/.cargo/bin/
+            fi
       - name: Run grcov
         run: grcov . -s . --binary-path ./target/debug/ --excl-start '^mod\s+tests\s*\{$' -t covdir --branch --ignore-not-existing --keep-only 'src/**' -o ./target/covdir.json
       - name: Generate coverage report
